--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 :root {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Open Sans",
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Open Sans',
     sans-serif;
   place-items: center;
 }
