Fix night mode text color

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
   #appLight {
     --color-background: white;
+    --color-text: #383838;
 
     --color-primary: #7dc599;
     --color-secondary: #b98a61;
@@ -16,6 +17,7 @@
 
   #appDark {
     --color-background: rgb(36, 36, 36);
+    --color-text: #d3d3d3;
 
     --color-primary: #7dc599;
     --color-secondary: #dfaf86;
