--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@
   padding: 2rem;
   text-align: center;
 }
+
+.grayed-out-img {
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  filter: grayscale(100%);
+  opacity: 0.5;
+}
